fix: Synchronize version to 0.2.6 and fix build configuration
- Update setup.py version to 0.2.6
- Update pyproject.toml version to 0.2.6
- Update ilovetools/__init__.py version to 0.2.6
- Fix license specification in pyproject.toml for setuptools compatibility
- Remove deprecated license classifier
- Add dependencies and optional-dependencies to pyproject.toml
- Enhance GitHub Actions workflow with manual trigger and package validation
- Update CHANGELOG with 0.2.6 entry documenting fixes
- Create comprehensive DEPLOYMENT.md guide for PyPI publishing

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -8,6 +8,7 @@ on:
       - 'setup.py'
       - 'pyproject.toml'
       - 'ilovetools/**'
+  workflow_dispatch:  # Allows manual triggering from GitHub Actions tab
 
 jobs:
   publish:
@@ -29,8 +30,11 @@ jobs:
     - name: Build package
       run: python -m build
     
+    - name: Check package
+      run: twine check dist/*
+    
     - name: Publish to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: twine upload dist/*
+      run: twine upload dist/* --verbose
