--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -33,8 +33,11 @@ jobs:
     - name: Check package
       run: twine check dist/*
     
-    - name: Publish to PyPI
+    - name: Publish sdist to PyPI (only)
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: twine upload dist/* --verbose
+      # Upload only the source distribution (tar.gz) to avoid wheel filename reuse blocks
+      run: |
+        ls -la dist
+        twine upload dist/*.tar.gz --verbose
