--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ilovetools"
-version = "0.2.23"
+version = "0.2.24"
 description = "A comprehensive Python utility library with modular tools for AI/ML, data processing, and daily programming needs"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,7 +12,7 @@ license = "MIT"
 authors = [
     {name = "Ali Mehdi", email = "ali.mehdi.dev579@gmail.com"}
 ]
-keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "transformers", "positional-encoding", "attention-mechanism", "multi-head-attention", "rope", "alibi", "deep-learning", "nlp"]
+keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "learning-rate-schedulers", "optimization", "adaptive-learning-rate", "cosine-annealing", "onecycle", "sgdr", "deep-learning", "nlp"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
