--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ilovetools"
-version = "0.2.27"
+version = "0.2.28"
 description = "A comprehensive Python utility library with modular tools for AI/ML, data processing, and daily programming needs"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,7 +12,7 @@ license = "MIT"
 authors = [
     {name = "Ali Mehdi", email = "ali.mehdi.dev579@gmail.com"}
 ]
-keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "loss-functions", "mse", "mae", "cross-entropy", "focal-loss", "dice-loss", "huber-loss", "hinge-loss", "kl-divergence", "triplet-loss", "regression", "classification", "segmentation", "deep-learning", "neural-networks"]
+keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "data-augmentation", "image-augmentation", "text-augmentation", "mixup", "cutout", "random-erasing", "autoaugment", "randaugment", "albumentations", "computer-vision", "nlp", "deep-learning", "neural-networks", "training", "generalization", "overfitting"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -28,6 +28,7 @@ dependencies = [
     "requests>=2.31.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
+    "scipy>=1.10.0",
 ]
 
 [project.optional-dependencies]
