--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ilovetools"
-version = "0.2.33"
+version = "0.2.34"
 description = "A comprehensive Python utility library with modular tools for AI/ML, data processing, and daily programming needs"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,7 +12,7 @@ license = "MIT"
 authors = [
     {name = "Ali Mehdi", email = "ali.mehdi.dev579@gmail.com"}
 ]
-keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "embeddings", "word-embeddings", "word2vec", "glove", "fasttext", "positional-encoding", "sinusoidal-encoding", "learned-embeddings", "token-embeddings", "character-embeddings", "segment-embeddings", "token-type-embeddings", "semantic-similarity", "cosine-similarity", "embedding-space", "embedding-matrix", "lookup-table", "distributed-representations", "dense-vectors", "nlp", "natural-language-processing", "transformers", "bert", "gpt", "attention", "vocabulary", "tokenization", "pretrained-embeddings", "transfer-learning", "deep-learning", "neural-networks", "pytorch", "tensorflow", "keras"]
+keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "graph-neural-networks", "gnn", "gcn", "gat", "graphsage", "gin", "graph-convolutional-network", "graph-attention-network", "message-passing", "neighborhood-aggregation", "node-classification", "link-prediction", "graph-classification", "node-embeddings", "graph-embeddings", "social-networks", "knowledge-graphs", "molecular-graphs", "citation-networks", "drug-discovery", "molecular-property-prediction", "friend-recommendation", "product-recommendation", "traffic-prediction", "relational-data", "graph-pooling", "spectral-graph-theory", "spatial-graph-convolution", "attention-mechanism", "inductive-learning", "graph-isomorphism", "deep-learning", "neural-networks", "pytorch", "tensorflow"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
