--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ilovetools"
-version = "0.2.34"
+version = "0.2.35"
 description = "A comprehensive Python utility library with modular tools for AI/ML, data processing, and daily programming needs"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,7 +12,7 @@ license = "MIT"
 authors = [
     {name = "Ali Mehdi", email = "ali.mehdi.dev579@gmail.com"}
 ]
-keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "graph-neural-networks", "gnn", "gcn", "gat", "graphsage", "gin", "graph-convolutional-network", "graph-attention-network", "message-passing", "neighborhood-aggregation", "node-classification", "link-prediction", "graph-classification", "node-embeddings", "graph-embeddings", "social-networks", "knowledge-graphs", "molecular-graphs", "citation-networks", "drug-discovery", "molecular-property-prediction", "friend-recommendation", "product-recommendation", "traffic-prediction", "relational-data", "graph-pooling", "spectral-graph-theory", "spatial-graph-convolution", "attention-mechanism", "inductive-learning", "graph-isomorphism", "deep-learning", "neural-networks", "pytorch", "tensorflow"]
+keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "autoencoder", "variational-autoencoder", "vae", "denoising-autoencoder", "sparse-autoencoder", "contractive-autoencoder", "encoder-decoder", "latent-space", "bottleneck", "reconstruction-loss", "kl-divergence", "reparameterization-trick", "dimensionality-reduction", "anomaly-detection", "fraud-detection", "feature-learning", "unsupervised-learning", "generative-models", "image-compression", "image-denoising", "elbo", "probabilistic-models", "deep-learning", "neural-networks", "pytorch", "tensorflow", "keras"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
